[project]
name = "pywolken"
version = "0.1.0"
description = "Python point cloud processing library — the Python alternative to PDAL"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jonas" }]
readme = "README.md"
keywords = ["point-cloud", "lidar", "las", "laz", "pdal", "geospatial", "dem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "laspy[lazrs]>=2.5",
    "scipy>=1.10",
    "pyproj>=3.5",
]

[project.optional-dependencies]
raster = ["rasterio>=1.3"]
viz = ["matplotlib>=3.7", "plotly>=5.0"]
dask = ["dask[array]>=2023.0"]
mesh = ["open3d>=0.17"]
all = ["pywolken[raster,viz,dask,mesh]"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
pywolken = "pywolken.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pywolken"]

[tool.ruff]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
